<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:text="Input Expense Information Here" />

        <EditText
            android:id="@+id/expense_name_field"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="@string/name_of_expense" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textSize="15dp"
                android:text="Date:"/>

            <Spinner
                android:id="@+id/year_spinner"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="75dp" />

            <Spinner
                android:id="@+id/month_spinner"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="75dp" />

        </LinearLayout>

        <EditText
            android:id="@+id/expense_charge_field"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="@string/charge_of_expense" />

        <EditText
            android:id="@+id/expense_comment_field"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="@string/comment_of_expense" />

        <Button
            android:id="@+id/add_expense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_expense" />

        <Button
            android:id="@+id/del_expense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_expense" />

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_back_button"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingTop="70dp"
        android:paddingRight="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
